# tarsier

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html
.github/workflows/: pages.yml  release.yml  rust.yml  typos.yml
assets/: gen_assets.sh  manifest.json  sw.js
src/: app.rs  central_panel.rs  document.rs  edit_mode.rs  errors.rs  file.rs  file_handler.rs  lib.rs  main.rs  operations.rs  panels.rs  selection.rs  settings.rs  side_panel.rs  top_panel.rs  windows.rs
