[package]
name = "tarsier"
version = "1.1.7"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
edition = "2021"
description = "A simple image editor"
license = "MIT"
rust-version = "1.88"
homepage = "https://tarsier.n4n5.dev/"
repository = "https://github.com/Its-Just-Nans/tarsier"
documentation = "https://docs.rs/tarsier"
keywords = ["image", "edition", "editor"]
categories = ["graphics", "multimedia"]
include = ["LICENSE", "**/*.rs", "Cargo.toml", "assets/*", "./index.html"]


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
image = "0.25.9"
egui_extras = { version = "0.33", features = ["all_loaders"] }
bladvak = "1.0.8"
# bladvak = { path = "../bladvak" }
kamadak-exif = "0.6.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
