[package]
name = "tarsier"
version = "1.1.9"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
edition = "2021"
description = "A simple image editor"
license = "MIT"
rust-version = "1.88"
homepage = "https://tarsier.n4n5.dev/"
repository = "https://github.com/Its-Just-Nans/tarsier"
documentation = "https://docs.rs/tarsier"
keywords = ["image", "edition", "editor"]
categories = ["graphics", "multimedia"]
include = ["LICENSE", "**/*.rs", "Cargo.toml", "assets/*", "./index.html"]


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
bladvak = "1.1.1"
# bladvak = { path = "../bladvak" }
serde = { version = "1", features = ["derive"] }
image = "0.25.9"
kamadak-exif = "0.6.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
